Fix tel and email on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,7 @@ h1, h2, h3, h4, h5, h6 {
     
     .header h1 {
         font-size: 2.5em;
-        margin: 80px 0 0 0;
+        margin: 180px 0 0 0;
     }
     
     .header h2 {
@@ -342,15 +342,33 @@ h1, h2, h3, h4, h5, h6 {
     .header .logo {
         top: 40px;
         left: 50%;
-        margin: 0 0 0 -95px;
+        margin: 0 0 0 -90px;
     }
+    
+    .header a[href*="tel:"] {
+        top: 100px;
+        left: 50%;
+        margin: 0 0 0 -50px;
+        z-index: 2;
+    }
+    .header a[href*="mailto:"] {
+        top: 100px;
+        left: 50%;
+        margin: 0 0 0 23px;
+    }
+        .header a[href*="tel:"]:hover, .header a[href*="mailto:"]:hover {
+            width: 46px;
+            text-indent: -20em;
+            padding-left: 0;
+            background-position: center center;
+        }
     
     .header .icon {
         padding: 80px 0 20px 0;
     }
     
     .header .btn.start {
-        margin: 0;
+        margin: 0 0 30px 0;
     }
     
 }
